[package]
name = "citadel_proto"
version = "0.3.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "Networking library for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

[features]
default = ["filesystem", "multi-threaded", "std"]
filesystem = ["citadel_user/filesystem"]
multi-threaded = []
sql = ["citadel_user/sql"]
redis = ["citadel_user/redis"]
webrtc = ["webrtc-util"]
localhost-testing = ["citadel_wire/localhost-testing", "citadel_user/localhost-testing", "tracing"]
localhost-testing-assert-no-proxy = ["localhost-testing"]
localhost-testing-loopback-only = ["citadel_wire/localhost-testing-loopback-only"]
google-services = ["citadel_user/google-services"]

std = [
    "citadel_user/std",
    "citadel_crypt/std",
    "citadel_pqcrypto/std",
    "citadel_wire/std",
    "netbeam/std",
    "atomic/std"
]

wasm = [
    "citadel_user/wasm",
    "citadel_crypt/wasm",
    "citadel_pqcrypto/wasm",
    "citadel_wire/wasm",
    "netbeam/wasm"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-semver = { version = "0.3.0", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
futures = { version = "0.3.25", default-features = false }
log = { default-features = false, version = "0.4.17" }
async-trait = { default-features = false, version = "0.1.61" }
tokio-util = { version = "0.7.4", features = ["net", "codec", "time", "io"] }
tokio = { version = "1.24", default-features = false, features = [] }
auto_impl = { default-features = false, version = "1.0.1" }
tokio-stream = { default-features = false, version = "0.1.11" }
parking_lot = { default-features = false, version = "0.12.1" }
zerocopy = { default-features = false, version = "0.6.1" }
bytes = {version = "^1.3.0", default-features = false, features = ["serde"]}
byteorder = { default-features = false, version = "1.4.3" }
atomic = { default-features = false, version = "0.5.1", features = ["fallback"] }
serde = { version = "^1.0.152", features=["derive"] }
anyhow = { default-features = false, version = "1.0.68" }
either = { default-features = false, version = "1.8.0" }
async-stream = { default-features = false, version = "0.3.3" }
citadel_crypt = { path = "../citadel_crypt", version = "0.3.0", default-features=false }
citadel_user = { path = "../citadel_user", version = "0.3.0", default-features=false }
citadel_wire = { path = "../citadel_wire", version = "0.3.0", default-features=false }
citadel_pqcrypto = { path = "../citadel_pqcrypto", version = "0.3.0", default-features=false }
netbeam = { path = "../netbeam", version = "0.3.0", default-features=false }
once_cell = { default-features = false, version = "1.17.0" }
webrtc-util = { version = "0.5.4", optional = true }
uuid = { version = "1.2.2", default-features = false, features = ["serde", "v4"] }
itertools = { default-features = false, version = "0.10.5" }
tracing = { version = "0.1.37", default-features = false, optional = true }
#libp2p = { version = "0.43.0", default-features=false, features = ["tcp-tokio", "serde"] }

[dev-dependencies]
citadel_logging = { path = "../citadel_logging", version = "0.3.0" }
tracing = "0.1.37"
#ureq = "2.6.1"
rand = "0.8.5"
rstest = "0.16.0"

[lib]
doctest = false
