[package]
name = "citadel_proto"
version = "0.6.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "Networking library for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

[features]
default = ["filesystem", "multi-threaded", "std"]
filesystem = ["citadel_user/filesystem"]
multi-threaded = []
sql = ["citadel_user/sql"]
redis = ["citadel_user/redis"]
webrtc = ["webrtc-util"]
localhost-testing = ["citadel_wire/localhost-testing", "citadel_user/localhost-testing", "tracing"]
localhost-testing-assert-no-proxy = ["localhost-testing"]
localhost-testing-loopback-only = ["citadel_wire/localhost-testing-loopback-only"]
google-services = ["citadel_user/google-services"]
vendored = ["citadel_user/vendored", "citadel_wire/vendored"]

std = [
    "citadel_user/std",
    "citadel_crypt/std",
    "citadel_pqcrypto/std",
    "citadel_wire/std",
    "citadel_io/std",
    "netbeam/std",
    "atomic/std"
]

wasm = [
    "citadel_user/wasm",
    "citadel_crypt/wasm",
    "citadel_pqcrypto/wasm",
    "citadel_wire/wasm",
    "citadel_io/wasm",
    "netbeam/wasm",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-semver = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true, features = ["net", "codec", "time", "io"] }
tokio = { workspace = true }
auto_impl = { workspace = true }
tokio-stream = { workspace = true }
zerocopy = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
atomic = { workspace = true, features = ["fallback"] }
serde = { workspace = true, features=["derive"] }
anyhow = { workspace = true }
either = { workspace = true }
async-stream = { workspace = true }
citadel_crypt = { workspace = true }
citadel_user = { workspace = true }
citadel_wire = { workspace = true }
citadel_io = { workspace = true }
citadel_pqcrypto = { workspace = true }
netbeam = { workspace = true }
once_cell = { workspace = true }
webrtc-util = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4"] }
itertools = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
citadel_logging = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }

[lib]
doctest = false
