[package]
name = "citadel_proto"
version = "0.14.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "Networking library for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

[features]
default = ["filesystem", "std"]
filesystem = ["citadel_user/filesystem"]
opfs = ["citadel_user/opfs"]
multi-threaded = []
sql = ["citadel_user/sql"]
redis = ["citadel_user/redis"]
webrtc = ["webrtc-util"]
# Linux-only io_uring backend for the raw-UDP inbound recv path. Off by default; forwarded to
# citadel_io, where the unsafe ring code lives (this crate is `forbid(unsafe_code)`). When enabled it
# attempts io_uring at socket setup and falls back to the standard tokio path if init fails (old
# kernels, restricted sandboxes). No effect on non-Linux/WASM targets — a harmless no-op there.
io-uring = ["citadel_io/io-uring"]
localhost-testing = [
    "citadel_wire/localhost-testing",
    "citadel_user/localhost-testing",
    "tracing",
]
localhost-testing-assert-no-proxy = ["localhost-testing"]
google-services = ["citadel_user/google-services"]
vendored = ["citadel_user/vendored", "citadel_wire/vendored"]

std = [
    "citadel_user/std",
    "citadel_crypt/std",
    "citadel_pqcrypto/std",
    "citadel_wire/std",
    "citadel_io/std",
    "netbeam/std",
    "atomic/std",
]

wasm-threads = ["citadel_crypt/wasm-threads"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
citadel_types = { workspace = true }
embedded-semver = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
auto_impl = { workspace = true }
zerocopy = { workspace = true, features = ["byteorder", "derive"] }
bytes = { workspace = true, features = ["serde"] }
byteorder = { workspace = true }
atomic = { workspace = true, features = ["fallback"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
either = { workspace = true }
async-stream = { workspace = true }
citadel_crypt = { workspace = true }
citadel_user = { workspace = true }
citadel_wire = { workspace = true }
citadel_io = { workspace = true }
citadel_pqcrypto = { workspace = true }
netbeam = { workspace = true }
once_cell = { workspace = true }
webrtc-util = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde", "v4"] }
itertools = { workspace = true }
tracing = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
sha3 = { workspace = true }
citadel_logging = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio-tungstenite = { workspace = true, features = ["connect", "handshake"] }

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { workspace = true, features = ["wasmbind"] }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Event",
    # WebRTC DataChannel (unordered mode = UDP equivalent)
    "RtcPeerConnection",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelEvent",
    "RtcDataChannelState",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcSessionDescription",
    "RtcIceCandidate",
    "RtcIceCandidateInit",
    "RtcPeerConnectionIceEvent",
    "RtcSignalingState",
    "RtcIceConnectionState",
    "RtcIceGatheringState",
    "RtcDataChannelType",
    # Fetch API (signaling service)
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    # Crypto (random nonce generation)
    "Crypto",
] }
js-sys = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
citadel_logging = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
