[package]
name = "citadel_sdk"
version = "0.3.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "High-level library to build applications on the Citadel Protocol"
edition = "2021"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filesystem", "std"]
filesystem = ["citadel_proto/filesystem", "dirs2"]
multi-threaded = ["citadel_proto/multi-threaded"]
sql = ["citadel_proto/sql"]
redis = ["citadel_proto/redis"]
webrtc = ["citadel_proto/webrtc"]

std = ["citadel_proto/std"]
wasm = ["citadel_proto/wasm"]
google-services = ["citadel_proto/google-services"]

# for testing only
localhost-testing = ["citadel_proto/localhost-testing", "tracing", "citadel_logging"]
localhost-testing-assert-no-proxy = ["citadel_proto/localhost-testing-assert-no-proxy"]
localhost-testing-loopback-only = ["citadel_proto/localhost-testing-loopback-only"]

doc-images = ["embed-doc-image"]

[dependencies]
citadel_proto = { version = "0.3.0", path = "../citadel_proto", default-features = false }
embed-doc-image = { version = "0.1.4", optional = true }
tokio = { version = "1.24", default-features = false }
futures = { version = "0.3.25", default-features = false }
parking_lot = { default-features = false, version = "0.12.1" }
log = { default-features = false, version = "0.4.17" }
lazy_static = { default-features = false, version = "1.4.0" }
uuid = { version = "1.2.2", default-features = false, features = ["v4"] }
dirs2 = { version = "3.0.1", default-features = false, optional = true }
tracing = { version = "0.1.37", default-features = false, optional = true }
citadel_logging = { path = "../citadel_logging", version = "0.3.0", optional = true }
anyhow = { version = "1", default-features = false }

[dev-dependencies]
tokio = { version = "1.24", default-features = false, features = ["rt"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
dirs2 = "3.0.1"
citadel_logging = { path = "../citadel_logging", version = "0.3.0" }
rstest = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
rand = "0.8.5"

[lib]
#doctest = false

[package.metadata.cargo-all-features]
# Features "foo" and "bar" are incompatible, so skip permutations including them
skip_feature_sets = [
    ["std", "wasm"],
]

allowlist = ["std", "filesystem", "google-services", "multi-threaded", "sql", "redis", "webrtc"]
