[package]
name = "citadel_sdk"
version = "0.4.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "High-level library to build applications on the Citadel Protocol"
edition = "2021"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filesystem", "std"]
filesystem = ["citadel_proto/filesystem", "dirs2"]
multi-threaded = ["citadel_proto/multi-threaded"]
sql = ["citadel_proto/sql"]
redis = ["citadel_proto/redis"]
webrtc = ["citadel_proto/webrtc"]

std = ["citadel_proto/std"]
wasm = ["citadel_proto/wasm"]
google-services = ["citadel_proto/google-services"]
vendored = ["citadel_proto/vendored"]

# for testing only
localhost-testing = ["citadel_proto/localhost-testing", "tracing", "citadel_io/deadlock-detection"]
localhost-testing-assert-no-proxy = ["citadel_proto/localhost-testing-assert-no-proxy"]
localhost-testing-loopback-only = ["citadel_proto/localhost-testing-loopback-only"]

doc-images = ["embed-doc-image"]

[dependencies]
citadel_proto = { workspace = true }
citadel_io = { workspace = true }
embed-doc-image = { workspace = true, optional = true }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dirs2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
citadel_logging = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }
citadel_io = { workspace = true }
dirs2 = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
hyper = { workspace = true, features = ["client", "server"] }

[package.metadata.cargo-all-features]
# Features "foo" and "bar" are incompatible, so skip permutations including them
skip_feature_sets = [
    ["std", "wasm"],
]

allowlist = ["std", "filesystem", "google-services", "multi-threaded", "sql", "redis", "webrtc"]
