[package]
name = "citadel_sdk"
version = "0.14.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "High-level library to build applications on the Citadel Protocol"
edition = "2021"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filesystem", "std"]
filesystem = ["citadel_proto/filesystem", "dirs2"]
opfs = ["citadel_proto/opfs"]
multi-threaded = ["citadel_proto/multi-threaded"]
# Opt-in StateContainer lock-contention profiling (diagnostics/benches only); forwarded to citadel_proto.
lock-profiling = ["citadel_proto/lock-profiling"]
sql = ["citadel_proto/sql"]
redis = ["citadel_proto/redis"]
webrtc = ["citadel_proto/webrtc"]
# Linux-only io_uring inbound UDP backend (no-op on other targets); see citadel_proto's feature.
io-uring = ["citadel_proto/io-uring"]

std = ["citadel_proto/std"]
wasm-threads = ["citadel_proto/wasm-threads"]
google-services = ["citadel_proto/google-services"]
vendored = ["citadel_proto/vendored"]

# for testing only
localhost-testing = [
    "citadel_proto/localhost-testing",
    "tracing",
    "citadel_io/deadlock-detection",
]
localhost-testing-assert-no-proxy = [
    "citadel_proto/localhost-testing-assert-no-proxy",
]

doc-images = ["embed-doc-image"]

# Opt-in (NOT default): a library must not force a #[global_allocator] on its consumers (two such
# definitions in one binary fail to link). The project's own binaries/benches/examples enable this;
# downstream servers can opt in for the allocator win under multi-session load.
mimalloc = ["dep:mimalloc"]

[dependencies]
citadel_proto = { workspace = true }
citadel_io = { workspace = true }
citadel_user = { workspace = true }
embed-doc-image = { workspace = true, optional = true }
futures = { workspace = true }
log = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dirs2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
citadel_logging = { workspace = true }
# Cross-platform high-performance allocator; gated behind the opt-in `mimalloc` feature and used as a
# #[global_allocator] only in this project's own binaries/benches (non-wasm).
mimalloc = { version = "0.1", default-features = false, optional = true }
anyhow = { workspace = true }
bytes = { workspace = true }
citadel_types = { workspace = true }
citadel_wire = { workspace = true }

[dev-dependencies]
citadel_io = { workspace = true }
dirs2 = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
hyper = { workspace = true, features = ["client", "server"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"

# Macro end-to-end throughput/latency bench (Phase-0 measurement foundation + PGO training workload).
# Custom harness (own main). Requires --features localhost-testing,multi-threaded to do real work.
[[bench]]
name = "macro_throughput"
harness = false

# Multi-session contention bench (server-side concurrency scaling; gates the StateContainer work).
[[bench]]
name = "multi_session_throughput"
harness = false

# Multi-vconn contention bench: one session's StateContainer holding N peer vconns (full P2P mesh).
# This is the measurement that actually gates the StateContainer lock-granularization work — the
# other two benches each touch only a single vconn per StateContainer and miss intra-session contention.
[[bench]]
name = "multi_vconn_throughput"
harness = false

[package.metadata.cargo-all-features]
# Features "foo" and "bar" are incompatible, so skip permutations including them
skip_feature_sets = [["std", "wasm"]]

allowlist = [
    "std",
    "filesystem",
    "google-services",
    "multi-threaded",
    "sql",
    "redis",
    "webrtc",
]
