[package]
name = "citadel_treekem"
version = "0.14.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
edition = "2021"
description = "Post-quantum TreeKEM continuous group key agreement (CGKA) for zero-trust group messaging"
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
workspace = ".."
readme = "../README.md"
categories = ["cryptography", "network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
citadel_pqcrypto = { workspace = true }
citadel_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-big-array = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
sha3 = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive", "alloc"] }
arrayvec = { workspace = true }
rand = { workspace = true }
