[package]
name = "citadel_user"
version = "0.4.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "User backend library for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filesystem", "std"]
redis = ["redis-base", "mobc"]
sql = ["sqlx", "base64", "itertools"]
filesystem = ["citadel_crypt/filesystem", "tokio-util", "tokio-stream"]
std = [
    "citadel_crypt/std",
    "tokio/fs",
    "rand/std",
    "sha3/std",
    "bstr/std"
]
wasm = ["citadel_crypt/wasm"]
google-services = ["openssl", "jwt", "firebase-rtdb"]

# whenever an accountmanager is created, all accounts are purged when localhost-testing is enabled
localhost-testing = []
jwt-testing = []

[dependencies]
#futures-preview = { version = "=0.3.0-alpha.19", features = ["compat", "async-await"]}
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"], optional = true }
serde = { version = "1.0.152", features=["rc", "derive"] }
serde_millis = { default-features = false, version = "0.1.1" }
tokio = { version = "1.24", default-features = false, features = ["io-util"] }
async-trait = { default-features = false, version = "0.1.61" }
futures = { version = "0.3.25", default-features = false }
rand = { version = "0.8.5", default-features = false }
multimap = { default-features = false, version = "0.9.0", features = ["serde_impl"] }
parking_lot = { version = "0.12.1", features = ["serde"] }
log = { default-features = false, version = "0.4.17" }
twox-hash = { default-features = false, version = "1.6.3" }
sha3 = { version = "0.10", default-features = false }
citadel_crypt = { path = "../citadel_crypt", version = "0.4.0", default-features=false }
serde_json = { default-features = false, version = "1.0.91", features = ["alloc"] }
base64 = { version = "0.13.1", default-features = false, optional = true }
bytes = { default-features = false, version = "1.3.0" }
bstr = { default-features = false, version = "1.1.0", features = ["alloc", "unicode"] }
sqlx = { version = "0.6.3", features = ["all-databases", "runtime-tokio-native-tls"], optional = true }
redis-base = { package = "redis", version = "0.21.7", features = ["tokio-comp", "tokio-native-tls-comp"], optional=true }
mobc = { version = "0.8.1", default-features = false, optional = true, features = ["tokio"] }
firebase-rtdb = { path = "../firebase-rtdb", version = "0.4.0", optional = true }
jwt = { version = "0.16.0", default-features = false, features = ["openssl"], optional = true }
openssl = { version = "0.10.46", default-features = false, features = ["vendored"], optional = true }
uuid = { version = "1.2.2", default-features = false, features = ["v4"] }
bincode2 = { default-features = false, version = "2.0.1" }
chrono = { default-features = false, version = "0.4.23", features = ["clock"] }
tokio-util = { version = "0.7.4", default-features = false, features = ["io"], optional = true }
tokio-stream = { version = "0.1.11", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.24", features = ["macros"] }
citadel_logging = { path = "../citadel_logging", version = "0.4.0" }
citadel_io = { path = "../citadel_io", version = "0.4.0", default-features=false }
dirs2 = "3.0.1"
rstest = "0.17.0"
lazy_static = "1.4.0"

citadel_pqcrypto = { version = "0.4.0", path = "../citadel_pqcrypto" }

[lib]
doctest = false
