[package]
name = "citadel_user"
version = "0.12.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "User backend library for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filesystem", "std"]
redis = ["redis-base", "mobc"]
sql = ["sqlx", "itertools"]
filesystem = ["citadel_crypt/filesystem"]
std = [
    "citadel_crypt/std",
    "rand/std",
    "sha3/std",
    "bstr/std"
]
wasm = ["citadel_crypt/wasm", "citadel_io/wasm"]
google-services = ["openssl", "jwt", "firebase-rtdb"]
vendored = ["openssl/vendored"]

localhost-testing = []
jwt-testing = []

[dependencies]
citadel_io = { workspace = true }
itertools = { workspace = true, features = ["use_alloc"], optional = true }
serde = { workspace = true, features=["rc", "derive"] }
async-trait = { workspace = true }
futures = { workspace = true, features = ["alloc", "executor"] }
rand = { workspace = true }
multimap = { workspace = true, features = ["serde_impl"] }
parking_lot = { workspace = true, features = ["serde"] }
log = { workspace = true }
sha3 = { workspace = true }
citadel_crypt = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
bytes = { workspace = true }
bstr = { workspace = true, features = ["alloc", "unicode"] }
sqlx = { workspace = true, features = ["all-databases", "runtime-tokio-native-tls"], optional = true }
redis-base = { workspace = true, features = ["tokio-comp", "tokio-native-tls-comp"], optional=true }
mobc = { workspace = true, optional = true, features = ["tokio"] }
firebase-rtdb = { workspace = true, optional = true }
jwt = { workspace = true, features = ["openssl"], optional = true }
openssl = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }
bincode = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
citadel_types = { workspace = true }

[dev-dependencies]
citadel_logging = { workspace = true }
citadel_io = { workspace = true }
dirs2 = { workspace = true }
rstest = { workspace = true }
lazy_static = { workspace = true }
citadel_pqcrypto = { workspace = true }

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
