[package]
name = "citadel_wire"
version = "0.3.0"
authors = ["Thomas Braun <thomas.braun@avarok.net>"]
description = "NAT traversal and wire support for the Citadel Protocol"
edition = "2021"
workspace = ".."
homepage = "https://avarok.net/"
repository = "https://github.com/Avarok-Cybersecurity/Citadel-Protocol"
readme = "../README.md"
categories = ["cryptography", "post-quantum", "quantum", "network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "netbeam/std",
    "citadel_io/std",
    "openssl/default",
    "quinn/default",
    "serde/std"
]
localhost-testing = ["tracing"]
localhost-testing-loopback-only = []
wasm = [
    "citadel_io/wasm",
    "netbeam/wasm"
]

[dependencies]
tokio = { version = "1.24", default-features = false, features = ["net"] }
futures = { version = "0.3.25", default-features = false }
async-trait = { default-features = false, version = "0.1.61" }
async-trait-with-sync = { default-features = false, version = "0.1.36" }
bytes = { default-features = false, version = "^1.3.0" }
byteorder = { default-features = false, version = "1.4.3" }
citadel_io = { path = "../citadel_io", version = "0.3.0", default-features = false }
anyhow = { default-features = false, version =  "1.0.68" }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
log = { default-features = false, version = "0.4.17" }
bincode2 = { default-features = false, version = "2.0.1" }
async_ip = { path = "../async_ip", version = "0.3.0" }
itertools = { default-features = false, version = "0.10.5", features = ["use_alloc"] }
either = { default-features = false, version = "1.8.0" }
netbeam = { path = "../netbeam", default-features = false, version = "0.3.0" }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
tracing = { version = "0.1.37", optional = true }
lazy_static = { default-features = false, version = "1.4.0" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
socket2 = { version = "0.4.7", features = ["all"] }
rustls-native-certs = "0.6.2"
igd = { version = "^0.12.0", features = ["aio"] }
quinn = { version = "0.9.3", default-features = false, features = ["rustls"] }
openssl = { version = "0.10.45", default-features = false, features = ["vendored"] }
stun = { default-features = false, version = "0.4.4" }
rcgen = { default-features = false, version = "0.10.0" }
rustls = { version = "0.20.7", features = ["quic", "dangerous_configuration"] }
rustls-pemfile = { default-features = false, version = "1.0.1" }
tokio-rustls = { default-features = false, version = "0.23.4" }

[dev-dependencies]
citadel_logging = { path = "../citadel_logging", version = "0.3.0" }
rand = "0.8.5"
tokio-util = "0.7.4"
rstest = "0.16.0"

[lib]
doctest = false
